--- a/css/style.css
+++ b/css/style.css
@@ -145,3 +145,19 @@ a{
 	line-height: 45px;
 	font-weight: bold;
 }
+.features{
+	color: #323232;
+	background-color: #e3dac3;
+	background-image: url("../img/features-pattern.jpg");
+}
+.features h2{
+	font-size: 24px;
+	line-height: 30px;
+}
+.features-item{
+	list-style: none;
+}
+.features-item p{
+	font-size: 16px;
+	line-height: 22px;
+}
