--- a/css/style.css
+++ b/css/style.css
@@ -187,4 +187,17 @@ a{
 }
 .subscribe-front{
 	background-color: #f8f7f4;
+	font-size: 16px;
+	line-height: 22px;
+}
+.contacts{
+	color: #323232;
+	font-size: 14px;
+	line-height: 20px;
+	background-color: #f8f7f4;	
+}
+.contacts b{
+	
+	font-size: 18px;
+	line-height: 24px;
 }
