--- a/css/style.css
+++ b/css/style.css
@@ -83,11 +83,15 @@ a{
 	background-image: -ms-linear-gradient( 90deg, rgb(242,104,67) 0%, rgb(231,74,53) 100%);
 	box-shadow: inset 0px 2px 2px 0px rgba(148, 39, 24, 0.004);
 }
-.login-link{
+.login-link a{
 	font-size: 13px;
 	line-height: 24px;
 	color: #323232;
 	text-decoration: underline;
+}
+.login-link a:hover,
+.login-link a:active{
+	color: #e84d37;
 }
 .main-contacts{
 	font-size: 14px;
@@ -219,6 +223,10 @@ a{
 .main-footer a{
 	color: #ffffff;
 	text-decoration: underline;
+}
+.main-footer a:hover,
+.main-footer a:active{
+	color: #ffbc9e;
 }
 .footer-social ul{
 	list-style: none;
