--- a/css/style.css
+++ b/css/style.css
@@ -308,6 +308,33 @@ a{
 	font-size: 18px;
 	line-height: 24px;
 }
+.pagination-list{
+	color: #ffffff;
+	list-style: none;
+}
+.pagination-item-off{
+	opacity: 0.2;
+}
+.pagination-item a{
+	color: #ffffff;
+}
+.pagination-item a:hover{
+	background-color: rgba(255, 255, 255, 0.2);
+}
+.pagination-item a:active{
+	color: #323223;
+	background-color: rgba(255, 255, 255, 1);
+}
+.pagination-item-current a:hover{
+	background-color: #ffffff;
+}
+.pagination-item-off a:hover{
+	background: none;
+}
+.pagination-item-current a{
+	color: #323232;
+	background-color: #f8f7f4;
+}
 .main-footer{
 	color: #ffffff;
 	font-size: 13px;
