--- a/css/style.css
+++ b/css/style.css
@@ -50,8 +50,13 @@ a{
 	padding: 15px;
 	color: #999999;
 	background-color: #ffffff;
-	border: 2px solid #d3d3d2;
+	border: 1px solid #d3d3d2;
 	border-radius: 6px;
+}
+.form input:hover,
+.form-search input:hover,
+.form-feedback textarea:hover{
+	border: 2px solid #9a9a9a;
 }
 .menu-item{
 	background-color: rgba(248, 247, 244, 0.2);
@@ -236,6 +241,9 @@ a{
 .hits-item{
 	list-style: none;
 }
+.hits-item:hover{
+	background-color: rgba(255, 255, 255, 0.2);
+}
 .hits-item h3{
 	text-decoration: underline;
 	text-align: center;
@@ -292,7 +300,7 @@ a{
 	line-height: 24px;
 	color: #999999;
 	background-color: #ffffff;
-	border: 2px solid #d3d3d2;
+	border: 1px solid #d3d3d2;
 	border-radius: 6px;
 }
 .modal-feedback textarea{
