--- a/css/style.css
+++ b/css/style.css
@@ -276,6 +276,9 @@ a{
     box-shadow: inset 0 2px 1px 0 rgba(105, 105, 105, 0.004);
     text-shadow: none;
 }
+.slider{
+	margin-bottom: 40px;
+}
 .slider h3{
     font-size: 60px;
     font-weight: normal;
@@ -329,7 +332,7 @@ a{
 	width: 95%;
 	margin-left: 2.25%;
 	margin-right: 2.25%;
-	margin-top: 40px;
+	margin-bottom: 35px;
 	display: flex;
 	flex-direction: : column;
 	justify-content: center;
@@ -376,8 +379,22 @@ a{
 	max-width: 1200px;
 	min-width: 900px;
 }
+.hits-list{
+	width: 95.5%;
+	margin: 0 auto;
+	padding: 0;
+	display: flex;
+	justify-content: space-between;
+}
 .hits-item{
     list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: baseline;
+    width: 22.25%;
+    min-height: 300px;
+	position: relative;
+
 }
 .hits-item:hover{
     background-color: rgba(255, 255, 255, 0.2);
@@ -385,15 +402,35 @@ a{
 .hits-item h3{
     text-align: center;
     text-decoration: underline;
+	margin-top: 15px;
+	margin-bottom: 15px;
+    order: 2;
 }
 .hits-item b{
+	
     font-size: 45px;
     line-height: 45px;
+	margin-top: 210px;
 }
 .hits-item span{
+	
     font-size: 30px;
     font-weight: bold;
     line-height: 45px;
+}
+.hits-item img{
+	border-radius: 50%;
+	width: 100%;
+	height: auto;
+	position: absolute;
+	order: -1;
+	z-index: -1;
+}
+.hits-item .button{
+	order: 3;
+
+	/*что-бы не мешало при составлении сетки*/
+	display: none;
 }
 .features{
     color: #323232;
