--- a/css/style.css
+++ b/css/style.css
@@ -433,23 +433,43 @@ a{
 	display: none;
 }
 .features{
+	box-sizing: border-box;
     color: #323232;
     background-color: #e3dac3;
     background-image: url('../img/features-pattern.jpg');
+	width: 95.5%;
+	margin: 0 auto;
+	padding: 20px;
+	padding-top: 30px;
+	border-radius: 15px;
 }
 .features h2{
+	margin: 0;
     font-size: 24px;
     line-height: 30px;
 }
-.features-item{
-    list-style: none;
+.features-list{
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	font-size: 0;
 }
-
+.features-item{
+	box-sizing: border-box;
+	display: inline-block;
+	width: 50%;
+	padding-left: 60px;
+}
+.features-item p{
+	font-size: 16px;
+	margin: 0;
+}
 .blog-news{
     background-color: #fff;
     background-image: url('../img/blog-sherbet.jpg');
     background-repeat: no-repeat;
 }
+
 .blog-news p{
     color: #323232;
 }
