--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,7 @@ a{
 }
 
 .button{
+	padding: 0;
     font: inherit;
     font-size: 18px;
     line-height: 46px;
@@ -442,6 +443,7 @@ a{
 	padding: 20px;
 	padding-top: 30px;
 	border-radius: 15px;
+	margin-bottom: 40px;
 }
 .features h2{
 	margin: 0;
@@ -464,30 +466,61 @@ a{
 	font-size: 16px;
 	margin: 0;
 }
+.row-container{
+	width: 95.5%;
+	margin: 0 auto;
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 40px;
+}
 .blog-news{
     background-color: #fff;
     background-image: url('../img/blog-sherbet.jpg');
     background-repeat: no-repeat;
+	width: 48.5%;
+	border-radius: 15px;
+	display: flex;
+	flex-direction: column;
+	padding: 20px;
+	margin-right: 4.5%;
 }
-
 .blog-news p{
-    color: #323232;
+    color: #323232; 
+    order: -1;
+    margin: 0;
 }
 .blog-news h3{
     font-size: 24px;
     line-height: 30px;
-
+	background-color: rgba(255, 255, 255, 0.8);
     text-decoration: underline;
-
+	width: 300px;
     color: #323232;
 }
 .subscribe{
     color: #323232;
     background-color: #f8f7f4;
     background-image: url('../img/subscribe-border.svg');
+	width: 48.5%;
+	border-radius: 15px;
+	padding: 6px;
 }
 .subscribe-front{
+	box-sizing: border-box;
     background-color: #f8f7f4;
+    border-radius: 15px;
+    height: 100%;
+    padding: 20px;
+}
+.subscribe-front p{
+	margin: 0;
+	margin-bottom: 10px;
+}
+.form-subscribe{
+	display: flex;
+}
+.form-subscribe .button{
+
 }
 .subscribe input,
 .modal-feedback input,
