--- a/css/style.css
+++ b/css/style.css
@@ -587,15 +587,22 @@ a{
     color: #323232;
     background-color: #f8f7f4;
 }
+.main-footer .container{
+	margin: 0 auto;
+	width: 95.5%;
+	display: flex;
+	justify-content: space-between;
+}
 .main-footer{
     font-size: 13px;
     line-height: 18px;
-
+	max-width: 1200px;
+	min-width: 900px;
+	margin: 0 auto;
     color: #fff;
 }
 .main-footer a{
     text-decoration: underline;
-	
     color: #fff;
 }
 .main-footer a:hover,
@@ -603,10 +610,21 @@ a{
     color: #ffbc9e;
 }
 .footer-social ul{
+	display: flex;
     list-style: none;
+    margin: 0;
+    padding: 0;
 }
 .footer-link-list{
     list-style: none;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height: 50px;
+}
+.footer-link-list li{
+	margin-right: 30px;
 }
 .footer-copyright{
     font-size: 12px;
