--- a/css/style.css
+++ b/css/style.css
@@ -253,12 +253,22 @@ a{
 .bredcrumbs a:active{
     color: #ffbc9e;
 }
+.page-title{
+	margin-bottom: 50px;
+}
+.form-filters{
+	display: flex;
+	flex-wrap: wrap;
+	align-items: flex-start;
+}
 .form-filters ul{
     list-style: none;
 }
 .form-filters legend{
     font-size: 14px;
     line-height: 16px;
+    position: absolute;
+    top: -20px;
 }
 .form-filters input{
     font-size: 16px;
@@ -280,6 +290,35 @@ a{
     border: none;
     border-radius: 36px;
     background-color: rgba(255, 255, 255, 0.2);
+    padding: 10px;
+    margin: 0;
+    margin-right: 16px;
+    margin-bottom: 38px;
+    position: relative;
+}
+.filters-item-price{
+	/*временно*/
+	width: 200px;
+	height: 22px;
+}
+.richness-list{
+	display: flex;
+	margin: 0;
+	padding: 0;
+}
+.richness-list li{
+	margin-right: 50px;
+}
+.fillers-list{
+	display: flex;
+	margin: 0;
+	padding: 0;
+}
+.fillers-list legend{
+
+}
+.fillers-list li{
+	margin-right: 50px;
 }
 .button-filters{
     border: 2px solid #fff;
@@ -288,6 +327,7 @@ a{
     background-image: none;
     box-shadow: none;
     text-shadow: none;
+    line-height: 38px;
 }
 .button-filters:hover{
     color: #323232;
@@ -404,6 +444,13 @@ a{
 	max-width: 1200px;
 	min-width: 900px;
 }
+.catalog-list{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	padding: 0;
+	margin: 0;
+}
 .hits-list{
 	padding: 0;
 	display: flex;
@@ -416,6 +463,7 @@ a{
     align-items: baseline;
     width: 22.25%;
     min-height: 300px;
+    min-width: 200px;
 	position: relative;
 
 }
