--- a/css/style.css
+++ b/css/style.css
@@ -7,78 +7,88 @@ body{
     font-weight: 400;
     line-height: 22px;
 
-    color: #fff;
+    color: #ffffff;
     background-color: #849d8f;
 }
 a{
     text-decoration: none;
 }
-.visual-hidden {
-	position: absolute;
-	clip: rect(0 0 0 0);
-	width: 1px;
-	height: 1px;
-	margin: -1px;
+.visual-hidden{
+    clip: rect(0 0 0 0);
+
+    position: absolute;
+
+    width: 1px;
+    height: 1px;
+    margin: -1px;
 }
 .main-header{
-	display: flex;
-	justify-content: center;
-	min-width: 900px;
+    display: flex;
+
+    min-width: 900px;
     max-width: 1200px;
     margin: 0 auto;
+
+    justify-content: center;
 }
 .container-header{
-	display: flex;
-	flex-direction: column;
-	align-items: flex-end;
+    display: flex;
+    flex-direction: column;
+
     width: 95.5%;
     margin-bottom: 10px;
     padding-right: 2.25%;
     padding-left: 2.25%;
+
+    align-items: flex-end;
 }
 .main-navigation{
-	width: 100%;
     display: flex;
+
+    width: 100%;
+
     justify-content: space-between;
 }
 .main-navigation a{
-    color: #fff;
+    color: #ffffff;
 }
 .navigation-container{
-	display: flex;
+    display: flex;
 }
 .main-logo{
     margin-top: 9px;
 }
 .site-navigation{
     display: flex;
-	
-	list-style: none;
+
     margin-top: 25px;
     margin-bottom: 20px;
     padding: 0;
+
+    list-style: none;
 }
 .site-navigation-sub{
-	margin: 0;
-	padding: 0;
-	list-style: none;
+    margin: 0;
+    padding: 0;
+
+    list-style: none;
 }
 .site-navigation-current a{
     background-color: #d07058;
 }
 .site-navigation-item > a{
-	margin: 25px;
+    margin: 25px;
 
     font-weight: bold;
 
     text-decoration: underline;
 
-    color: #fff;
+    color: #ffffff;
 }
 .site-navigation-item > a:hover{
     text-decoration: none;
 
-    color: #333;
+    color: #333333;
     background-color: #f8f7f4;
 }
 .site-navigation-sub a{
@@ -98,10 +108,10 @@ a{
 .form-search input{
     padding: 15px;
 
-    color: #999;
+    color: #999999;
     border: 1px solid #d3d3d2;
     border-radius: 6px;
-    background-color: #fff;
+    background-color: #ffffff;
 }
 .form input:hover,
 .form-search input:hover,
@@ -110,17 +120,18 @@ a{
 }
 .menu-cart,
 .menu-login{
-	display: flex;
+    display: flex;
 }
 .menu-item{
-    background-color: rgba(248, 247, 244, 0.2);
+    margin: 20px;
+    margin-right: 0;
+    margin-left: 10px;
     padding: 10px;
     padding-right: 15px;
     padding-left: 15px;
+
     border-radius: 20px;
-    margin: 20px;
-    margin-left: 10px;
-    margin-right: 0;
+    background-color: rgba(248, 247, 244, 0.2);
 }
 .menu-item:hover{
     color: #323232;
@@ -131,23 +142,26 @@ a{
     background-color: #f7f6f3;
 }
 .menu-cart{
-	position: relative;
+    position: relative;
 }
 .menu-cart-sub{
-    color: #323232;
-    background-color: #f8f7f4;
-	position: absolute;
-	min-width: 540px;
-	right: 0px;
-	top: 65px;
-	border-radius: 15px;
-	padding: 20px;
-	display: flex;
-	flex-direction: column;
-	align-items: flex-end;
+    display: flex;
+    /*иначе мешает*/
+    display: none;
+    flex-direction: column;
 
-	/*иначе мешает*/
-	display: none;
+    position: absolute;
+    top: 65px;
+    right: 0px;
+
+    min-width: 540px;
+    padding: 20px;
+
+    color: #323232;
+    border-radius: 15px;
+    background-color: #f8f7f4;
+
+    align-items: flex-end;
 }
 .cart-table-item-text a{
     color: #323232;
@@ -161,32 +175,37 @@ a{
     line-height: 18px;
 }
 .cart-table{
+    margin-bottom: 30px;
+
     font-size: 13px;
     line-height: 16px;
-	margin-bottom: 30px;
+
     color: #323232;
 }
 .cart-totals{
-	margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 .cart-table-item-unit{
-    color: #999;
+    color: #999999;
 }
 
 .button{
-	padding: 0;
+    display: inline-block;
+
+    padding: 0;
+    padding-right: 20px;
+    padding-left: 20px;
+
     font: inherit;
     font-size: 18px;
     line-height: 46px;
-	display: inline-block;
-	padding-left: 20px;
-	padding-right: 20px;
-	border-radius: 26px;
+
     text-align: center;
     vertical-align: middle;
-	
-    color: #fff;
+
+    color: #ffffff;
     border: none;
+    border-radius: 26px;
     background-image:    -moz-linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
     background-image: -webkit-linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
     background-image:     -ms-linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
@@ -221,61 +240,66 @@ a{
     font-size: 14px;
     line-height: 16px;
 
-    color: #fff;
+    color: #ffffff;
 }
 .main-contacts b{
     font-size: 22px;
     line-height: 24px;
 
-    color: #fff;
+    color: #ffffff;
 }
 .big-container{
-	width: 95.5%;
-	margin: 0 auto;
+    width: 95.5%;
+    margin: 0 auto;
 }
 .title-container{
-	display: flex;
-	flex-direction: column-reverse;
+    display: flex;
+    flex-direction: column-reverse;
 }
 .bredcrumbs{
+    display: flex;
+
+    padding: 0;
+
     font-size: 14px;
     line-height: 16px;
-	padding: 0;
+
     list-style: none;
-    display: flex;
 }
 .bredcrumbs a{
     text-decoration: underline;
 
-    color: #fff;
+    color: #ffffff;
 }
 .bredcrumbs a:hover,
 .bredcrumbs a:active{
     color: #ffbc9e;
 }
 .page-title{
-	margin-bottom: 50px;
+    margin-bottom: 50px;
 }
 .form-filters{
-	display: flex;
-	flex-wrap: wrap;
-	align-items: flex-start;
+    display: flex;
+
+    flex-wrap: wrap;
+    align-items: flex-start;
 }
 .form-filters ul{
     list-style: none;
 }
 .form-filters legend{
-    font-size: 14px;
-    line-height: 16px;
     position: absolute;
     top: -20px;
+
+    font-size: 14px;
+    line-height: 16px;
 }
 .form-filters input{
     font-size: 16px;
     font-weight: 18px;
 }
 .form-filters select{
-    color: #fff;
+    color: #ffffff;
     border: none;
     background: none;
 }
@@ -287,47 +311,50 @@ a{
     color: #323232;
 }
 .filters-item{
-    border: none;
-    border-radius: 36px;
-    background-color: rgba(255, 255, 255, 0.2);
-    padding: 10px;
+    position: relative;
+
     margin: 0;
     margin-right: 16px;
     margin-bottom: 38px;
-    position: relative;
+    padding: 10px;
+
+    border: none;
+    border-radius: 36px;
+    background-color: rgba(255, 255, 255, 0.2);
 }
 .filters-item-price{
-	/*временно*/
-	width: 200px;
-	height: 22px;
+    /*временно*/
+    width: 200px;
+    height: 22px;
 }
 .richness-list{
-	display: flex;
-	margin: 0;
-	padding: 0;
+    display: flex;
+
+    margin: 0;
+    padding: 0;
 }
 .richness-list li{
-	margin-right: 50px;
+    margin-right: 50px;
 }
 .fillers-list{
-	display: flex;
-	margin: 0;
-	padding: 0;
-}
-.fillers-list legend{
+    display: flex;
 
+    margin: 0;
+    padding: 0;
 }
+
 .fillers-list li{
-	margin-right: 50px;
+    margin-right: 50px;
 }
 .button-filters{
-    border: 2px solid #fff;
+    line-height: 38px;
+
+    border: 2px solid #ffffff;
     border-radius: 36px;
     background-color: #a6b7ae;
     background-image: none;
     box-shadow: none;
     text-shadow: none;
-    line-height: 38px;
 }
 .button-filters:hover{
     color: #323232;
@@ -345,80 +372,96 @@ a{
     text-shadow: none;
 }
 .slider{
-	margin-bottom: 40px;
+    margin-bottom: 40px;
 }
 .slider h3{
+    width: 690px;
+    margin-bottom: 25px;
+
     font-size: 60px;
     font-weight: normal;
-    line-height: 60px;
-	text-align: center;
-    color: #fff;
-    margin-bottom: 25px;
     font-weight: bold;
-    width: 690px;
+    line-height: 60px;
+
+    text-align: center;
+
+    color: #ffffff;
 }
 .slider-list{
-	padding: 0;
-	margin: 0;
+    margin: 0;
+    padding: 0;
 }
 .slider-list-item,
 .slider-toggle-list li{
     list-style: none;
 }
 .slider-list-item{
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-end;
-	align-items: center;
-	min-height: 500px;
-	position: relative;
+    display: flex;
+    flex-direction: column;
+
+    position: relative;
+
+    min-height: 500px;
+
+    justify-content: flex-end;
+    align-items: center;
 }
 .slider-list-item img{
-	order: -1;
-	position: absolute;
-	z-index: -1;
-	top: -178px;
+    position: absolute;
+    z-index: -1;
+    top: -178px;
+
+    order: -1;
 }
 .slider-list-item-strawberry,
 .slider-list-item-lemon{
-	display: none;
+    display: none;
 }
 .button-slider{
-    font-size: 32px;
-    line-height: 64px;
     width: 278px;
-    border-radius: 32px;
+
+    font-size: 32px;
     font-weight: bold;
+    line-height: 64px;
+
+    border-radius: 32px;
 }
 .slider-toggle-list{
-	display: flex;
-	padding: 0;
-	margin: 0;
-	margin-left: 2.25%;
+    display: flex;
+
+    margin: 0;
+    margin-left: 2.25%;
+    padding: 0;
 }
 .banners{
-	margin-bottom: 35px;
-	display: flex;
-	flex-direction: : column;
-	justify-content: center;
+    display: flex;
+    flex-direction: : column;
+
+    margin-bottom: 35px;
+
+    justify-content: center;
 }
 .banners-list{
-	display: flex;
-	justify-content: space-between;
-	width: 100%;
-	margin: 0;
-	padding: 0;
+    display: flex;
+
+    width: 100%;
+    margin: 0;
+    padding: 0;
+
+    justify-content: space-between;
 }
 .banners-item{
-	min-width: 420px;
-	max-width: 520px;
-    list-style: none;
-    border-radius: 14px;
+    min-width: 420px;
+    max-width: 520px;
     padding: 20px;
     padding-top: 15px;
+
+    list-style: none;
+
+    border-radius: 14px;
 }
 .banners-item:first-child{
-	margin-right: 4.5%;
+    margin-right: 4.5%;
 }
 .banners-item-raspberry{
     background-color: #570a17;
@@ -435,159 +478,186 @@ a{
     line-height: 22px;
 }
 .banners h3{
-	margin: 0;
+    margin: 0;
+
     font-size: 35px;
     line-height: 41px;
 }
 .main-container{
-	margin: 0 auto;
-	max-width: 1200px;
-	min-width: 900px;
+    min-width: 900px;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 .catalog-list{
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	padding: 0;
-	margin: 0;
+    display: flex;
+
+    margin: 0;
+    padding: 0;
+
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 .hits-list{
-	padding: 0;
-	display: flex;
-	justify-content: space-between;
+    display: flex;
+
+    padding: 0;
+
+    justify-content: space-between;
 }
 .hits-item{
-    list-style: none;
     display: flex;
+
+    position: relative;
+
+    width: 22.25%;
+    min-width: 200px;
+    min-height: 300px;
+
+    list-style: none;
+
     flex-wrap: wrap;
     align-items: baseline;
-    width: 22.25%;
-    min-height: 300px;
-    min-width: 200px;
-	position: relative;
-
 }
 .hits-item:hover{
     background-color: rgba(255, 255, 255, 0.2);
 }
 .hits-item h3{
+    margin-top: 15px;
+    margin-bottom: 15px;
+
     text-align: center;
     text-decoration: underline;
-	margin-top: 15px;
-	margin-bottom: 15px;
+
     order: 2;
 }
 .hits-item b{
-	
+    margin-top: 210px;
+
     font-size: 45px;
     line-height: 45px;
-	margin-top: 210px;
 }
 .hits-item span{
-	
     font-size: 30px;
     font-weight: bold;
     line-height: 45px;
 }
 .hits-item img{
-	border-radius: 50%;
-	width: 100%;
-	height: auto;
-	position: absolute;
-	order: -1;
-	z-index: -1;
+    position: absolute;
+    z-index: -1;
+
+    width: 100%;
+    height: auto;
+
+    border-radius: 50%;
+
+    order: -1;
 }
 .hits-item .button{
-	order: 3;
+    /*что-бы не мешало при составлении сетки*/
+    display: none;
 
-	/*что-бы не мешало при составлении сетки*/
-	display: none;
+    order: 3;
 }
 .features{
-	box-sizing: border-box;
+    box-sizing: border-box;
+    margin-bottom: 40px;
+    padding: 20px;
+    padding-top: 30px;
+
     color: #323232;
+    border-radius: 15px;
     background-color: #e3dac3;
     background-image: url('../img/features-pattern.jpg');
-	padding: 20px;
-	padding-top: 30px;
-	border-radius: 15px;
-	margin-bottom: 40px;
 }
 .features h2{
-	margin: 0;
+    margin: 0;
+
     font-size: 24px;
     line-height: 30px;
 }
 .features-list{
-	list-style: none;
-	margin: 0;
-	padding: 0;
-	font-size: 0;
+    margin: 0;
+    padding: 0;
+
+    font-size: 0;
+
+    list-style: none;
 }
 .features-item{
-	box-sizing: border-box;
-	display: inline-block;
-	width: 50%;
-	padding-left: 60px;
+    display: inline-block;
+
+    box-sizing: border-box;
+    width: 50%;
+    padding-left: 60px;
 }
 .features-item p{
-	font-size: 16px;
-	margin: 0;
+    margin: 0;
+
+    font-size: 16px;
 }
 .row-container{
-	display: flex;
-	justify-content: space-between;
-	margin-bottom: 40px;
+    display: flex;
+
+    margin-bottom: 40px;
+
+    justify-content: space-between;
 }
 .blog-news{
-    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+
+    width: 48.5%;
+    margin-right: 4.5%;
+    padding: 20px;
+
+    border-radius: 15px;
+    background-color: #ffffff;
     background-image: url('../img/blog-sherbet.jpg');
     background-repeat: no-repeat;
-	width: 48.5%;
-	border-radius: 15px;
-	display: flex;
-	flex-direction: column;
-	padding: 20px;
-	margin-right: 4.5%;
 }
 .blog-news p{
-    color: #323232; 
-    order: -1;
     margin: 0;
+
+    color: #323232;
+
+    order: -1;
 }
 .blog-news h3{
+    width: 300px;
+
     font-size: 24px;
     line-height: 30px;
-	background-color: rgba(255, 255, 255, 0.8);
+
     text-decoration: underline;
-	width: 300px;
+
     color: #323232;
+    background-color: rgba(255, 255, 255, 0.8);
 }
 .subscribe{
+    width: 48.5%;
+    padding: 6px;
+
     color: #323232;
+    border-radius: 15px;
     background-color: #f8f7f4;
     background-image: url('../img/subscribe-border.svg');
-	width: 48.5%;
-	border-radius: 15px;
-	padding: 6px;
 }
 .subscribe-front{
-	box-sizing: border-box;
-    background-color: #f8f7f4;
-    border-radius: 15px;
+    box-sizing: border-box;
     height: 100%;
     padding: 20px;
+
+    border-radius: 15px;
+    background-color: #f8f7f4;
 }
 .subscribe-front p{
-	margin: 0;
-	margin-bottom: 10px;
+    margin: 0;
+    margin-bottom: 10px;
 }
 .form-subscribe{
-	display: flex;
+    display: flex;
 }
-.form-subscribe .button{
 
-}
 .subscribe input,
 .modal-feedback input,
 .modal-feedback textarea{
@@ -596,47 +666,54 @@ a{
     font-size: 16px;
     line-height: 24px;
 
-    color: #999;
+    color: #999999;
     border: 1px solid #d3d3d2;
     border-radius: 6px;
-    background-color: #fff;
+    background-color: #ffffff;
 }
 .modal-feedback textarea{
     resize: none;
 }
 .contacts{
+    position: relative;
+
     font-size: 14px;
     line-height: 20px;
-	position: relative;
+
     color: #323232;
 }
 .contacts b{
     font-size: 18px;
     line-height: 24px;
 }
+
 .feedback{
-	position: absolute;
-	background-color: #f8f7f4;
-	top: 80px;
-	right: 50px;
-	border-radius: 15px;
-	padding: 20px;
+    position: absolute;
+    top: 80px;
+    right: 50px;
+
+    padding: 20px;
+
+    border-radius: 15px;
+    background-color: #f8f7f4;
 }
 .feedback p{
-	margin-top: 0;
+    margin-top: 0;
 }
 .pagination-list{
-    list-style: none;
     display: flex;
-    justify-content: flex-end;
 
-    color: #fff;
+    list-style: none;
+
+    color: #ffffff;
+
+    justify-content: flex-end;
 }
 .pagination-item-off{
     opacity: 0.2;
 }
 .pagination-item a{
-    color: #fff;
+    color: #ffffff;
 }
 .pagination-item a:hover{
     background-color: rgba(255, 255, 255, 0.2);
@@ -646,7 +723,7 @@ a{
     background-color: rgba(255, 255, 255, 1);
 }
 .pagination-item-current a:hover{
-    background-color: #fff;
+    background-color: #ffffff;
 }
 .pagination-item-off a:hover{
     background: none;
@@ -656,52 +733,62 @@ a{
     background-color: #f8f7f4;
 }
 .main-footer .container{
-	margin: 0 auto;
-	width: 95.5%;
-	display: flex;
-	justify-content: space-between;
+    display: flex;
+
+    width: 95.5%;
+    margin: 0 auto;
+
+    justify-content: space-between;
 }
 .main-footer{
+    min-width: 900px;
+    max-width: 1200px;
+    margin: 0 auto;
+
     font-size: 13px;
     line-height: 18px;
-	max-width: 1200px;
-	min-width: 900px;
-	margin: 0 auto;
-    color: #fff;
+
+    color: #ffffff;
 }
 .main-footer a{
     text-decoration: underline;
-    color: #fff;
+
+    color: #ffffff;
 }
 .main-footer a:hover,
 .main-footer a:active{
     color: #ffbc9e;
 }
 .footer-social ul{
-	display: flex;
-    list-style: none;
+    display: flex;
+
     margin: 0;
     padding: 0;
+
+    list-style: none;
 }
 .footer-link-list{
-    list-style: none;
-    padding: 0;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
+
     height: 50px;
+    padding: 0;
+
+    list-style: none;
+
+    flex-wrap: wrap;
 }
 .footer-link-list li{
-	margin-right: 30px;
+    margin-right: 30px;
 }
 .footer-copyright{
     font-size: 12px;
 }
 .modal-feedback{
+    display: none;
+
     color: #323232;
     background-color: #f8f7f4;
-
-    display: none;
 }
 .modal-feedback b{
     font-size: 24px;
