--- a/css/style.css
+++ b/css/style.css
@@ -698,15 +698,28 @@ a{
     border-radius: 15px;
     background-color: #f8f7f4;
 }
-.subscribe-front p{
+.subscribe-front>p{
     margin: 0;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 .form-subscribe{
     display: flex;
+    justify-content: space-between;
+	align-items: center;
 }
+.form-subscribe p{
+	width: 100%;
+	margin: 0;
+	margin-right: 10px;
 
-
+}
+.form-subscribe .button{
+	height: 46px;
+}
+.form-subscribe input{
+	box-sizing: border-box;
+	width: 100%;
+}
 .subscribe input,
 .modal-feedback input,
 .modal-feedback textarea{
