--- a/css/style.css
+++ b/css/style.css
@@ -195,10 +195,12 @@ a{
     padding: 0;
     padding-right: 20px;
     padding-left: 20px;
+    padding-top: 11px;
+    padding-bottom: 11px;
 
     font: inherit;
     font-size: 18px;
-    line-height: 46px;
+    line-height: 24px;
 
     text-align: center;
     vertical-align: middle;
@@ -343,7 +345,7 @@ a{
     margin-right: 50px;
 }
 .button-filters{
-    line-height: 38px;
+    line-height: 18px;
 
     border: 2px solid #ffffff;
     border-radius: 36px;
@@ -396,13 +398,18 @@ a{
 .slider-list-item{
     display: flex;
     flex-direction: column;
-
     position: relative;
 
     min-height: 500px;
 
     justify-content: flex-end;
     align-items: center;
+    background-position: center 40%;
+    background-repeat: no-repeat;
+	
+}
+.slider-list-item-raspberry{
+	background-image: url("../img/slider-raspberry.png");
 }
 .slider-list-item img{
     position: absolute;
@@ -420,7 +427,9 @@ a{
 
     font-size: 32px;
     font-weight: bold;
-    line-height: 64px;
+    line-height: 44px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 
     border-radius: 32px;
 }
@@ -521,9 +530,7 @@ a{
 }
 .hits-item{
     display: flex;
-
-    position: relative;
-
+	
     width: 22.25%;
     min-width: 200px;
     min-height: 300px;
@@ -531,13 +538,14 @@ a{
     list-style: none;
 
     flex-wrap: wrap;
-    align-items: baseline;
+	flex-direction: column;
+	justify-content: flex-start;
 }
 .hits-item:hover{
     background-color: rgba(255, 255, 255, 0.2);
 }
 .hits-item h3{
-    margin-top: 15px;
+	margin-top: 0px;
     margin-bottom: 15px;
 
     text-align: center;
@@ -546,7 +554,6 @@ a{
     order: 2;
 }
 .hits-item b{
-    margin-top: 210px;
 
     font-size: 45px;
     line-height: 45px;
@@ -556,8 +563,12 @@ a{
     font-weight: bold;
     line-height: 45px;
 }
+.hits-item-price{
+	margin-top: -60px;
+	margin-bottom: 20px;
+
+}
 .hits-item img{
-    position: absolute;
     z-index: -1;
 
     width: 100%;
